message-domain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: domain-service
  template:
    metadata:
      labels:
        component: domain-service
    spec:
      containers:
        - name: message-domain
          image: koutilya/hello-api
          ports:
            - containerPort: 8080
