server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server-pod
  labels:
    component: web
spec:
  containers:
    - name: server
      image: koutilya/hello-api
      ports:
        - containerPort: 8080
