message-domain-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-domain-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: domain-service
  ports:
    - port: 5000
      targetPort: 8080
