order-details-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-details-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: order-details-service
  ports:
    - port: 5000
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-details-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: order-details-service
  template:
    metadata:
      labels:
        component: order-details-service
    spec:
      containers:
        - name: order-details
          image: koutilya/order-details
          ports:
            - containerPort: 8080
