server-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name : server-node-port
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 8080
      nodePort: 31515
  selector:
    component: web
