ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/use-regex: 'true'
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/rewrite-target: /
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          #- path: /api/?(.*)
          - path: /
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: message-domain-cluster-ip-service
              servicePort: 5000
